--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -1149,6 +1149,19 @@
      <string>Noise Dissolve</string>
     </property>
    </widget>
+   <widget class="QCheckBox" name="looping">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>192</y>
+      <width>61</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Looping</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
@@ -1194,6 +1207,7 @@
     <slot>selectTab(int)</slot>
     <slot>color2()</slot>
     <slot>shaderCompileChanged(int)</slot>
+    <slot>setLooping(int)</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -1706,6 +1720,22 @@
     <hint type="sourcelabel">
      <x>905</x>
      <y>268</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>491</x>
+     <y>318</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>looping</sender>
+   <signal>stateChanged(int)</signal>
+   <receiver>maincontainer</receiver>
+   <slot>setLooping(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>850</x>
+     <y>200</y>
     </hint>
     <hint type="destinationlabel">
      <x>491</x>
