--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -211,23 +211,23 @@
    <widget class="QPushButton" name="color0Btn">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>10</y>
+      <x>670</x>
+      <y>16</y>
       <width>70</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Change</string>
+     <string>Start Color</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="color0Display">
     <property name="geometry">
      <rect>
-      <x>730</x>
+      <x>660</x>
       <y>10</y>
-      <width>211</width>
-      <height>21</height>
+      <width>91</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -244,8 +244,11 @@
     <property name="contextMenuPolicy">
      <enum>Qt::NoContextMenu</enum>
     </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
     <property name="text">
-     <string>Start Color</string>
+     <string/>
     </property>
     <property name="frame">
      <bool>false</bool>
@@ -257,16 +260,16 @@
      <bool>true</bool>
     </property>
     <property name="placeholderText">
-     <string>Color Start</string>
+     <string>Start Color</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="color1Display">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>30</y>
-      <width>211</width>
-      <height>21</height>
+      <x>750</x>
+      <y>10</y>
+      <width>91</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -287,7 +290,7 @@
      <enum>Qt::NoContextMenu</enum>
     </property>
     <property name="text">
-     <string>Mid Color</string>
+     <string/>
     </property>
     <property name="frame">
      <bool>false</bool>
@@ -299,7 +302,7 @@
      <bool>true</bool>
     </property>
     <property name="placeholderText">
-     <string>Color End</string>
+     <string>Mid Color</string>
     </property>
     <property name="clearButtonEnabled">
      <bool>false</bool>
@@ -308,14 +311,14 @@
    <widget class="QPushButton" name="color1Btn">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>30</y>
+      <x>760</x>
+      <y>16</y>
       <width>70</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Change</string>
+     <string>Mid Color</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_StartSize">
@@ -1052,23 +1055,23 @@
    <widget class="QPushButton" name="color2Btn">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>50</y>
+      <x>850</x>
+      <y>16</y>
       <width>70</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Change</string>
+     <string>End Color</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="color2Display">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>50</y>
-      <width>211</width>
-      <height>21</height>
+      <x>840</x>
+      <y>10</y>
+      <width>91</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -1089,7 +1092,7 @@
      <enum>Qt::NoContextMenu</enum>
     </property>
     <property name="text">
-     <string>End Color</string>
+     <string/>
     </property>
     <property name="frame">
      <bool>false</bool>
@@ -1101,7 +1104,7 @@
      <bool>true</bool>
     </property>
     <property name="placeholderText">
-     <string>Color End</string>
+     <string>End Color</string>
     </property>
     <property name="clearButtonEnabled">
      <bool>false</bool>
@@ -1161,7 +1164,58 @@
     <property name="text">
      <string>Looping</string>
     </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
    </widget>
+   <zorder>graphics</zorder>
+   <zorder>browsepath</zorder>
+   <zorder>label_Lifetime</zorder>
+   <zorder>label_Velocity</zorder>
+   <zorder>label_EmissionDelay</zorder>
+   <zorder>label_MaxParticles</zorder>
+   <zorder>textBrowser</zorder>
+   <zorder>savePS</zorder>
+   <zorder>label_Gravity</zorder>
+   <zorder>label_Texture</zorder>
+   <zorder>color1Display</zorder>
+   <zorder>color1Btn</zorder>
+   <zorder>label_StartSize</zorder>
+   <zorder>emitterTypeBox</zorder>
+   <zorder>label_EmitterType</zorder>
+   <zorder>velocityX</zorder>
+   <zorder>velocityY</zorder>
+   <zorder>velocityZ</zorder>
+   <zorder>gravity</zorder>
+   <zorder>lifetime</zorder>
+   <zorder>label_VelocityY</zorder>
+   <zorder>startSizeX</zorder>
+   <zorder>startSizeY</zorder>
+   <zorder>maxParticles</zorder>
+   <zorder>rectangleWidget</zorder>
+   <zorder>loadPS</zorder>
+   <zorder>textureTypeBox</zorder>
+   <zorder>spriteSheetWidget</zorder>
+   <zorder>endSizeY</zorder>
+   <zorder>label_EndSize</zorder>
+   <zorder>endSizeX</zorder>
+   <zorder>textureView</zorder>
+   <zorder>emissionDelaySlider</zorder>
+   <zorder>label_EmDelaySlide</zorder>
+   <zorder>velocityXSlider</zorder>
+   <zorder>velocityYSlider</zorder>
+   <zorder>velocityZSlider</zorder>
+   <zorder>psTabs</zorder>
+   <zorder>label_VelocityX</zorder>
+   <zorder>label_VelocityZ</zorder>
+   <zorder>color2Display</zorder>
+   <zorder>label_EmitterType_2</zorder>
+   <zorder>rotateParticles</zorder>
+   <zorder>noiseDissolve</zorder>
+   <zorder>looping</zorder>
+   <zorder>color0Display</zorder>
+   <zorder>color0Btn</zorder>
+   <zorder>color2Btn</zorder>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
